--- a/less/home-page.less
+++ b/less/home-page.less
@@ -107,9 +107,12 @@ header{
       justify-content: center;
       align-items: center;
     }//media queary phone
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      align-items: flex-end;
+
       @media @phone {
         display: flex;
         flex-direction: column;
@@ -117,6 +120,7 @@ header{
         align-items: center;
         width: 100%;
       }//media query phone
+      
         .btn{
           .buttons();
         }//btn
